# artifacts/api-server/src/routes/accounts.ts
@@ -67,8 +67,6 @@ router.get("/", async (req, res) => {
       claimsCount: accountsTable.claimsCount,
       workingVotes: accountsTable.workingVotes,
       notWorkingVotes: accountsTable.notWorkingVotes,
-      checkStatus: accountsTable.checkStatus,
-      lastCheckAt: accountsTable.lastCheckAt,
       createdAt: accountsTable.createdAt,
       posterUsername: usersTable.username,
       posterAvatarUrl: usersTable.avatarUrl,
@@ -165,8 +163,6 @@ router.get("/:accountId", async (req, res) => {
       notWorkingVotes: accountsTable.notWorkingVotes,
       viewCount: accountsTable.viewCount,
       unlockMethod: accountsTable.unlockMethod,
-      checkStatus: accountsTable.checkStatus,
-      lastCheckAt: accountsTable.lastCheckAt,
       createdAt: accountsTable.createdAt,
       posterUsername: usersTable.username,
       posterAvatarUrl: usersTable.avatarUrl,
